fixed overflow problem

--- a/bn-filter-app/src/styles/App.css
+++ b/bn-filter-app/src/styles/App.css
@@ -1,13 +1,7 @@
-html, body, #app, #app>div {
-    overflow-x: hidden;
-    min-height: 100%;
-}
-
 .App {
     text-align: center;
     min-width: 600px;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-
 }
 
 .appHeader {
